# 004_NDK_Makeflie

./: README.md
app/: build.gradle
app/src/androidTest/java/kim/hsl/makeflie/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  native-lib.cpp
app/src/main/java/kim/hsl/makeflie/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/kim/hsl/makeflie/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
